обновлены все Controllers